# ComfyUI-InstanceDiffusion

./: .gitignore  README.md  __init__.py  constants.py  pyproject.toml
conditioning/: embeddings.py  fusers_patch.py  instance_conditioning.py
example_workflows/: Spline_Editor_InstanceDiffusion_kijai_01.json  example_four_people.json  example_workflow_fourpeople.json  fourpeople_workflow.json
model_helpers/: prepare_fusers.py  prepare_positionnet.py  prepare_scaleu.py
models/: prepare_fusers.py
modules/: attention.py  convnext.py  scaleu.py  text_grounding_net.py  text_grounding_tokenizer_input.py  util.py
nodes/: apply_scaleu_model_node.py  download_and_load_models.py  instance_diffusion_tracking_prompt_node.py  load_instance_fusers_node.py  load_instance_positionnet_node.py  load_instance_scaleu_node.py
utils/: decode_item.py  model_utils.py  prompt_utils.py
